--- a/index.html
+++ b/index.html
@@ -3,32 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Thiago Gomes | Portifólio</title>
   </head>
   <body>
     <nav class="navegacao">
       <ul class="menu">
         <li>
-          <a href="inicio">Inicio</a>
+          <a href="inicio" class="menu-link">Inicio</a>
         </li>
         <li>
-          <a href="sobre">Sobre</a>
+          <a href="sobre" class="menu-link">Sobre</a>
         </li>
         <li>
-          <a href="projetos">Projetos</a>
+          <a href="projetos" class="menu-link">Projetos</a>
         </li>
         <li>
-          <a href="contato">Contato</a>
+          <a href="contato" class="menu-link">Contato</a>
         </li>
       </ul>
     </nav>
 
     <main id="inicio" class="cabecalho">
-      <div>
-        <img src="" alt="Foto de Thiago Gomes" class="foto-perfil" />
-        <h1>Thiago Gomes</h1>
-        <p>Desenvolvedor Front End</p>
-      </div>
+      <img
+        src="./img/foto_perfil.png"
+        alt="Foto de Thiago Gomes"
+        class="foto-perfil"
+      />
+      <h1>Thiago Gomes</h1>
+      <p class="cabecalho-sub-titulo">Desenvolvedor Front End</p>
     </main>
 
     <section id="sobre" class="sobre">
@@ -46,41 +49,66 @@
       <h2 class="projetos-titulo">Meus Projetos</h2>
       <div class="projeto-caixa">
         <div class="projetos-card">
-          <img src="" alt="Projeto 1" class="projetos-imagem" />
-          <h3 class="info-projetos">Projeto 01</h3>
-          <p class="paragrafo-projetos">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
+          <img
+            src="./img/projeto-1.png"
+            alt="Projeto 1"
+            class="projetos-imagem"
+          />
+
+          <div class="caixa-textos-projeto">
+            <h3 class="info-projetos">Projeto 01</h3>
+            <p class="paragrafo-projetos">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
         </div>
 
         <div class="projetos-card">
-          <img src="" alt="Projeto 1" class="projetos-imagem" />
-          <h3 class="info-projetos">Projeto 02</h3>
-          <p class="paragrafo-projetos">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
+          <img
+            src="./img/projeto-2.png"
+            alt="Projeto 1"
+            class="projetos-imagem"
+          />
+          <div class="caixa-textos-projeto">
+            <h3 class="info-projetos">Projeto 02</h3>
+            <p class="paragrafo-projetos">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
         </div>
 
         <div class="projetos-card">
-          <img src="" alt="Projeto 1" class="projetos-imagem" />
-          <h3 class="info-projetos">Projeto 03</h3>
-          <p class="paragrafo-projetos">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
+          <img
+            src="./img/projeto-3.png"
+            alt="Projeto 1"
+            class="projetos-imagem"
+          />
+
+          <div class="caixa-textos-projeto">
+            <h3 class="info-projetos">Projeto 03</h3>
+            <p class="paragrafo-projetos">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
         </div>
       </div>
     </section>
 
     <section id="contato" class="contatos">
-      <h2 class="contatos-titulo">Contatos</h2>
+      <h2 class="contatos-titulo">Entre em Contatos</h2>
       <form class="formulario-contato" id="formulario">
-        <div class="nome-form">
-          <input placeholder="Nome" class="campo-form"/>
+        <div class="grupo-form">
+          <input placeholder="Nome" class="campo-form" />
         </div>
 
         <div class="grupo-form">
-          <textarea class="text-form" placeholder="Digite sua mensagem"></textarea>
+          <textarea
+            class="campo-form"
+            placeholder="Digite sua mensagem"
+          ></textarea>
         </div>
+
+        <button type="submit" class="botao-form">Enviar Whatsapp</button>
       </form>
     </section>
   </body>
