Add: Adicionar particulas e movimento foto de perfil.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Thiago Gomes | Portifólio</title>
   </head>
   <body>
+
+    <div class="particulas"></div>
+
     <nav class="navegacao">
       <ul class="menu">
         <li>
