--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Thiago Gomes | Portifólio</title>
   </head>
   <body>
-
     <div class="particulas"></div>
 
     <nav class="navegacao">
@@ -99,20 +98,45 @@
 
     <section id="contato" class="contatos">
       <h2 class="contatos-titulo">Entre em Contatos</h2>
-      <form class="formulario-contato" id="formulario">
+      <form
+        class="formulario-contato"
+        id="formulario"
+        onsubmit="enviarWhats(event)"
+      >
         <div class="grupo-form">
-          <input placeholder="Nome" class="campo-form" />
+          <input placeholder="Nome" class="campo-form" id="nome" />
         </div>
 
         <div class="grupo-form">
           <textarea
             class="campo-form"
             placeholder="Digite sua mensagem"
+            rows="6"
+            id="mensagem"
           ></textarea>
         </div>
 
         <button type="submit" class="botao-form">Enviar Whatsapp</button>
       </form>
     </section>
+
+    <script>
+      function enviarWhats(event) {
+
+        event.preventDefault()
+
+        const nome = document.getElementById("nome").value;
+        const mensagem = document.getElementById("mensagem").value;
+        const telefone = "5583999999999";
+
+        const texto = `Olá! Me chamo ${nome}, ${mensagem}`;
+
+        const msgFormatada = encodeURIComponent(texto);
+
+        const url = `https://wa.me/${telefone}/?text=${msgFormatada}`;
+
+        window.open(url, "_blank");
+      }
+    </script>
   </body>
 </html>
